--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         <div class="awesome">
             <div class="awesomeleft">
             <h1>This website is awesome</h1>
-            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+            <p style="font-size:18px;margin-top:6px;">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
             <button type="button">Sign up</button>
             </div>
             <div class="awesomeright">
-                <img src="/images/knight.jpg" alt="knight again" style="object-fit:fill;width:100%;height:auto;">
+                <img src="/images/knight.jpg" alt="knight again" style="object-fit:contain;width:100%;height:auto;border-radius: 12px;overflow:auto">
             </div>
 
         </div>
@@ -52,12 +52,16 @@
     </div>
     <div class="testimonial">
         <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-        <p ID="author">-Thor, God of Thunder</p>
+        <p style="font-size:24px;font-weight:bold;font-style:normal;text-align: end;margin-top: 0px;">-Thor, God of Thunder</p>
     </div>
     <div class="calltoaction">
-        <h3>Call to action! It's time!</h3>
+      <div class="bluepart">
+        <div class="bluetext">
+        <h3 style="font-size:18px;">Call to action! It's time!</h3>
         <p>Sign up for our product by clicking that button right over there!</p>
+        </div>
         <button type="button">Sign up</button>
+      </div>
     </div>
     <footer>Copyright The Odin Project 2021</footer>
     
